--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,8 @@
 .navigation {
   display: flex;
   flex-direction: row;
-  width: 30%;
+  font-size: 18px;
+  width: 50%;
   justify-content: space-around;
   justify-self: right;
 }
@@ -10,8 +11,10 @@
 .navigation a,
 .navigation a:visited {
   color: black;
+  margin-right: 8px;
   position: relative;
   text-decoration: none;
+  width: 20%;
 }
 
 .navigation a::before {
