--- a/app/page.module.css
+++ b/app/page.module.css
@@ -14,7 +14,7 @@
   margin-right: 8px;
   position: relative;
   text-decoration: none;
-  width: 20%;
+  width: fit-content;
 }
 
 .navigation a::before {
@@ -24,7 +24,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: blue;
+  background-color: #ffffff;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.5s ease-in-out 0s;
