--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,25 @@ footer {
 h1 {
   text-align: center;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #1e1e1e #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #1e1e1e;
+    border-radius: 12px;
+    border: 0px solid #1e1e1e;
+  }
